--- a/demo/index.html
+++ b/demo/index.html
@@ -12,7 +12,8 @@
 <foo-demo></foo-demo>
 
 
-<script src="../node_modules/jquery/dist/jquery.js"></script>
+<script src="../node_modules/@theoryofnekomata/jquery-paginator/node_modules/jquery/dist/jquery.js"></script>
+<script src="../node_modules/@theoryofnekomata/jquery-paginator/node_modules/imagesloaded/imagesloaded.pkgd.js"></script>
 <script src="../node_modules/@theoryofnekomata/jquery-paginator/bin/jquery-paginator.js"></script>
 
 <script src="../node_modules/angular/angular.js"></script>
